wip(api): adding rest api create user, openapi swagger validations tdd
