# api/config/openapi.yml
@@ -17,6 +17,8 @@ servers:
 tags:
   - name: greeting
     description: Greeting APIs
+  - name: user
+    description: User APIs
 paths:
   /hello:
     get:
@@ -59,6 +61,57 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FailResponse' 
+  /user:
+    post:
+      summary: Create User
+      tags:
+        - user
+      operationId: createUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: false
+              required:
+                - email
+                - password
+                - name
+              properties:
+                email:
+                  type: string
+                  format: email
+                password: 
+                  type: string
+                name:
+                  type: string
+      responses:
+        201: 
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: false
+                required:
+                  - userId
+                properties:
+                  userId:
+                    type: string
+        409:
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
+                
 components:
   securitySchemes:
     bearerAuth:
